<resources>
    <string name="app_name">MarvelAtMyGreatness</string>
    <string name="hero_image_descr">Hero Image</string>
    <string name="hero_bio_header">BIO:</string>
    <string name="hero_name">Hero Name:</string>
    <string name="hero_real_name">Real Name:</string>
    <string name="hero_first_appearance">First Appearance:</string>
    <string name="hero_created_by">Created By:</string>
    <string name="hero_publisher">Publisher:</string>
    <string name="hero_team">Team:</string>
    <string name="see_hero_details">See Full Details &#8230;</string>
    <string name="menu_item_favorite">Favorite</string>
    <string name="menu_item_delete_hero">Delete?</string>
    <string name="hero_list_header">Select a Hero</string>
    <string name="favorite_hero_list_header">Select a Favorite Hero!</string>
    <string name="create_hero_header">Create Your Own Hero!</string>
    <string name="create_hero_name_field">Enter Hero Name:</string>
    <string name="create_hero_real_name_field">Enter Hero Real Name:</string>
    <string name="create_hero_image">Select Hero Image</string>
    <string name="create_hero_first_app_field">Enter Hero Firs Appearance:</string>
    <string name="create_hero_created_by_field">Enter Your Name:</string>
    <string name="create_hero_publisher_field">Publisher:</string>
    <string name="create_hero_team_field">Enter Your Heroes Team:</string>
    <string name="create_hero_bio_field">Enter Your Heroes Bio:</string>
    <string name="create_hero_name_hint">Make up a Heroic Name!</string>
    <string name="create_hero_real_name_hint">John Smith&#8230;</string>
    <string name="select_hero_image_button">Select Hero Image</string>
    <string name="selected_hero_image_descr">Your Heroes Image</string>
    <string name="create_hero_first_app_hint">When was your hero born?</string>
    <string name="create_hero_created_by_hint">Enter your name here</string>
    <string name="create_hero_team_hint">What Team is your Hero on?</string>
    <string name="create_hero_bio_hint">Tell us about your Hero in a few sentences!</string>
    <string name="submit_hero">Submit Hero</string>
    <string name="app_creator">Brandon Fadley</string>
    <string name="toast_hero_added_favorites">Hero Added To Favorites!</string>
    <string name="toast_hero_removed_favorites">Hero Removed From Favorites!</string>
    <string name="toast_hero_created">Your New Hero has been created!</string>
    <string name="toast_hero_deleted">Your Hero Has Been Deleted!</string>
</resources>
